# ARTR2024-CMake-Base

./: CMakeLists.txt  artr_assignment.vcxproj  artr_assignment.vcxproj.filters  artr_assignment1.sln  readme.txt
cmake/: Assignment1.cmake  Auto-Vk-Toolkit.cmake
host_code/: assignment1.cpp  precompiled_headers.cpp  precompiled_headers.hpp  targetver.hpp
host_code/utils/: camera_presets.hpp  helper_functions.hpp  lights_editor.hpp  simple_geometry.cpp  simple_geometry.hpp
shaders/: blinnphong_and_normal_mapping.frag  lightsource_limits.h  shader_structures.glsl  sky_gradient.frag  sky_gradient.vert  transform_and_pass_on.vert
shaders/utils/: campreset_vispath.frag  campreset_vispath.vert  translucent_gizmo.frag  translucent_gizmo.vert
